tests/NormalTests/paczka1/small_fuzzy/99881126.err
Error in line 4: xatIvTM1 A780 26,7
Error in line 3: ppcouxG A537 72,3
